--- a/devServer/index.html
+++ b/devServer/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/js/WABAdm.nocache.js"></script>
+    <script src="/js/App.nocache.js"></script>
   </body>
 </html>
